documentation updata [ci-skip]

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -49,6 +49,9 @@
     "### `streamlit_app.py`: Main Streamlit Application\n",
     "This is the main entry point of the application. It ties together the components from the `storage/` directory to create a cohesive user interface. The application is structured to first fetch and display storage data, followed by unused tables analysis, storage forecasting, and recommendations. The session state is managed to ensure that data is only fetched or computed when necessary, reducing redundant operations and improving performance.\n",
     "\n",
+    "### `all_in_one.py`: Combined Streamlit Application\n",
+    "This file combines all the components into a single script for easier deployment and testing. It is useful for running the application locally or deploying it to Streamlit on Snowflake. The script imports the necessary modules and creates the Streamlit app with all the required functionality. Feel free to delete or only work off this file.\n",
+    "\n",
     "## Application Workflow\n",
     "\n",
     "1. **Data Fetching and Initialization:**  \n",
